# gateway-auth

./: .gitignore  README.md  _gerar_vectors.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  codeql.yml
fixtures/: vectors.json
node/: .npmignore  README.md  package-lock.json  package.json  tsconfig.json
node/src/: express.ts  index.ts
node/test/: express.test.ts  vectors.test.ts
python/: README.md  pyproject.toml
python/src/gateway_auth/: __init__.py  fastapi.py
python/tests/: conftest.py  test_fastapi.py  test_vectors.py
