[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gateway-auth"
version = "0.1.0"
description = "Ed25519 signature library for Portal Gateway authentication (Hiperfarma Opcao A)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Grupo Hiperfarma" },
]
keywords = ["ed25519", "signature", "authentication", "gateway", "hiperfarma"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
]
dependencies = [
    "cryptography>=42",
]

[project.optional-dependencies]
fastapi = [
    "fastapi>=0.100",
    "starlette>=0.27",
]
test = [
    "pytest>=7",
    "httpx>=0.25",
]

[project.urls]
Homepage = "https://github.com/marcelobragadossantos/gateway-auth"
Repository = "https://github.com/marcelobragadossantos/gateway-auth"
Issues = "https://github.com/marcelobragadossantos/gateway-auth/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/gateway_auth"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"
markers = [
    "asyncio: marks tests as async (auto-applied by conftest)",
]
